--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
-<!DOCTYPE html>
-<html lang="=en">
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="viewport" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="style.css" rel="stylesheet" />
-    <title>RVT</title>
+	<title>Maksims jermoshkins N2</title>
+	<link rel="stylesheet" type="text/css" href="style3_start.css">
 </head>
-
-<body>
-    <h6>Stundas uzdevums</h6>
-</body>
+<div class="wrapper">
+	<header class="header">
+		<h1>Šis ir uzdevums!</h1>
+		<p>Šis teksts atrodas header</p>
+	</header>
+	<section class="content">
+		<h2>CSS pielietojums</h2>
+		<p>Mācīties CSS ir jautri! Jūs variet padarīt mājaslapu savādāku.</p>
+	</section>
+	<footer class="footer">
+		<p>Šis teksts atrodas footer </p>
+	</footer>
+</div>
 
 </html>
