--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<header class="header">
 		<h1>Šis ir uzdevums!</h1>
 		<p>Šis teksts atrodas header</p>
+    </background-color:purple>
 	</header>
 	<section class="content">
 		<h2>CSS pielietojums</h2>
