--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <html>
 
 <head>
-	<title>Maksims jermoshkins N2</title>
+	<title>Maksims Jermoshkins N2</title>
 	<link rel="stylesheet" type="text/css" href="style3_start.css">
 </head>
 <div class="wrapper">
 	<header class="header">
 		<h1>Šis ir uzdevums!</h1>
 		<p>Šis teksts atrodas header</p>
-    </background-color:purple>
 	</header>
 	<section class="content">
 		<h2>CSS pielietojums</h2>
