--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 <div class="wrapper">
 	<header class="header">
 		<h1>Šis ir uzdevums!</h1>
-		<p>Šis teksts atrodas header</p>
+		<p1>Šis teksts atrodas header</h1>
 	</header>
 	<section class="content">
 		<h2>CSS pielietojums</h2>
-		<p>Mācīties CSS ir jautri! Jūs variet padarīt mājaslapu savādāku.</p>
+		<p1>Mācīties CSS ir jautri! Jūs variet padarīt mājaslapu savādāku.</p1>
 	</section>
 	<footer class="footer">
-		<p>Šis teksts atrodas footer </p>
+		<h3>Šis teksts atrodas footer </h3>
 	</footer>
 </div>
 
