--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 <html>
 
 <head>
-	<title>Maksims Jermoshkins N2</title>
-	<link rel="stylesheet" type="text/css" href="style3_start.css">
+<style>
+    <title>Maksims Jermoshkins N2</title>
+    <link rel="stylesheet" type="text/css" href="style3_start.css">
 </head>
 <div class="wrapper">
-	<header class="header">
-		<h1>Šis ir uzdevums!</h1>
-		<p1>Šis teksts atrodas header</h1>
-	</header>
-	<section class="content">
-		<h2>CSS pielietojums</h2>
-		<p1>Mācīties CSS ir jautri! Jūs variet padarīt mājaslapu savādāku.</p1>
-	</section>
-	<footer class="footer">
-		<h3>Šis teksts atrodas footer </h3>
-	</footer>
+    <header class="header">
+        <h1>Šis ir uzdevums!</h1> <br>
+        <p1>Šis teksts atrodas header</p>
+    </header> <br>
+    <section class="content">
+        <h2>CSS pielietojums</h2> <br>
+        <p2>Mācīties CSS ir jautri! Jūs variet padarīt mājaslapu savādāku.</p>
+    </section> <br>
+    <footer class="footer">
+        <p1>Šis teksts atrodas footer </p>
+    </footer>
 </div>
 
 </html>
