--- a/index.html
+++ b/index.html
@@ -1,6 +1,29 @@
 <html>
 
 <head>
+<style>
+ .content {
+   width: 50%;
+   border: 1px solid black;
+   display: inline-block;
+   padding: 30px;
+   margin: 10px 0;
+}
+
+  .header {
+  width: 50%;
+  color: white;
+  background: Purple;
+  padding: 30px;
+  margin: 10px 0;
+ }
+.footer {
+  width: 50%;
+  color: white;
+  background: Purple;
+  padding: 30px;
+  display: inline-block;
+</style>
     <title>Maksims Jermoshkins N2</title>
     <link rel="stylesheet" type="text/css" href="style3_start.css">
 </head>
