--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   background: Purple;
   padding: 30px;
   display: inline-block;
+  margin: 10px 0;
 </style>
     <title>Maksims Jermoshkins N2</title>
     <link rel="stylesheet" type="text/css" href="style3_start.css">
